Movendo index para pasta root, para utilizar o github page

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="src/assets/favicon.png" type="image/x-icon">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="src/css/styles.css">
   <title>Escutar muda tudo - Spotify</title>
 </head>
 <body>
@@ -15,7 +15,7 @@
       <div class="container flex items-center mx-auto">
         <div>
           <a href="#">
-            <img src="assets/spotify-logo.png" alt="spotify-logo" class="w-20 md:w-125px">
+            <img src="src/assets/spotify-logo.png" alt="spotify-logo" class="w-20 md:w-125px">
           </a>
         </div>
       <div class="flex justify-end flex-1 md:hidden text-white text-3xl">
@@ -59,7 +59,7 @@
         <p class="text-xs max-w-4xl mt-10">Somente para o plano Individual. Depois, apenas R$ 16,90/mês. Oferta indisponível para usuários que já experimentaram o Premium. Sujeita a Termos e Condições. A oferta termina em 31 de dez de 2020.</p>
       </div>
       <div class="mb-20">
-        <img src="assets/holiday-2020-balloons.png" alt="holiday-2020-balloons">
+        <img src="src/assets/holiday-2020-balloons.png" alt="holiday-2020-balloons">
       </div>
     </section>
     <section class="flex flex-col justify-center text-center bg-spotify-theme-mobile md:bg-spotify-theme bg-banner-mobile md:bg-banner bg-198% md:bg-175% bg-purple-main text-green-main py-40 px-4">
@@ -74,7 +74,7 @@
     <div class="grid grid-cols-1 md:grid-cols-6 bg-black text-white p-4 md:p-20">
       <div class="md:col-span-1 pt-10 md:pt-0">
         <a href="#">
-          <img src="assets/spotify-logo.png" alt="spotify-logo" class="w-20 md:w-132px">
+          <img src="src/assets/spotify-logo.png" alt="spotify-logo" class="w-20 md:w-132px">
         </a>
       </div>
 
